Fixed text overflow

--- a/public/assets/css/pages/common.css
+++ b/public/assets/css/pages/common.css
@@ -56,8 +56,7 @@ header.collage * {
     bottom: 0;
     left: 0;
     right: 0;
-    /* Используем адаптивную высоту: минимум 2.5rem, максимум 4rem, оптимально значение по размеру viewport */
-    height: clamp(2.5rem, 7vw, 10rem);
+    height: clamp(2.5rem, 7vw, 8rem); /* можно подрегулировать верхний предел */
     padding: 0.3rem;
     display: flex;
     background-color: rgba(0, 0, 0, 0.7);
@@ -67,9 +66,8 @@ header.collage * {
     transform: translateY(100%);
     transition: all 0.5s ease;
     pointer-events: none;
-    overflow: hidden;
+    overflow: visible;
 }
-
 
 .overlay__text {
     display: flex;
@@ -77,29 +75,24 @@ header.collage * {
     justify-content: center;
     align-items: center;
     width: 100%;
-    height: 100%;
-    padding: 5%;
+    padding: 0.2rem 1rem;
     font-family: 'Unbounded', sans-serif;
 }
 
 .overlay__header {
-    font-size: clamp(0.1rem, 1vw, 1rem);  /* минимальный, промежуточный и максимальный размеры */
-    text-align: center;
-    margin-bottom: 0.2rem;
+    font-size: clamp(0.6rem, 1vw, 1rem);
     line-height: 1.2;
     max-width: 90%;
     word-break: break-word;
+    margin-bottom: 0.3rem;
 }
 
 .overlay__description {
-    font-size: clamp(0.5rem, 0,5vw, 0.9rem);
-    text-align: center;
+    font-size: clamp(0.6rem, 0.9vw, 0.85rem);
     line-height: 1.3;
     max-width: 90%;
-    max-height: 3rem;  /* уменьшим максимальную высоту, чтобы не занимала половину картинки */
     word-break: break-word;
 }
-
 
 
 .collage__item:hover .collage__item-image {
